--- a/pinpad.html
+++ b/pinpad.html
@@ -10,9 +10,9 @@
 <body>
   <center>
   <form>
-    <input width="500px" class="header" type="text" name="pinpad" id="pad" maxlength="6" placeholder="Enter your pin" pattern="[0-9]{4,6}">
-  
+    
     <div>
+      <input width="500px" class="header" type="text" name="pinpad" id="pad" maxlength="6" placeholder="Enter your pin" pattern="[0-9]{4,6}"><br><br>
       <button class="button" type="button" name="one" onclick="clicked(1)">1</button>
       <button class="button" type="button" name="two" onclick="clicked(2)">2</button>
       <button class="button" type="button" name="three" onclick="clicked(3)">3</button><br>
@@ -25,8 +25,8 @@
       <button class="button" type="button" name="backspace" onclick="clicked('back')">⌫</button>
       <button class="button" type="button" name="zero" onclick="clicked(0)">0</button>
       <input class="button" type="submit" name="submit" value="✔️">
+      <div></div>
     </div>
-
 </form>
 
 
