--- a/pinpad.html
+++ b/pinpad.html
@@ -10,7 +10,7 @@
 <body>
   <center>
     <h1>Enter a 4 to 6 digit pin</h1>
-  <form autocomplete="off">
+  <form autocomplete="off" action="" method="POST">
 
     <div>
       <input autocomplete="off" class="header" type="text" name="pinpad" id="pad" minlength="4" maxlength="6" pattern="[0-9]{4,6}" required placeholder="Enter your pin"><br><br>
