--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,6 @@
   <LINK href="theme.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-      <button type="button" name="buttadawg">fortnite</button>
+      <button type="button" name="buttadawg" id="main">fortnite</button>
       <script src="popup.js"></script>
 </body>
