--- a/pinpad.html
+++ b/pinpad.html
@@ -14,25 +14,25 @@
 
     <div>
       <input autocomplete="off" class="header" type="text" name="pinpad" id="pad" minlength="4" maxlength="6" pattern="[0-9]{4,6}" required placeholder="Enter your pin"><br><br>
-      <button class="button" type="button" name="one" onclick="clicked(1)">1</button>
-      <button class="button" type="button" name="two" onclick="clicked(2)">2</button>
-      <button class="button" type="button" name="three" onclick="clicked(3)">3</button><br>
-      <button class="button" type="button" name="four" onclick="clicked(4)">4</button>
-      <button class="button" type="button" name="five" onclick="clicked(5)">5</button>
-      <button class="button" type="button" name="six" onclick="clicked(6)">6</button><br>
-      <button class="button" type="button" name="seven" onclick="clicked(7)">7</button>
-      <button class="button" type="button" name="eight" onclick="clicked(8)">8</button>
-      <button class="button" type="button" name="nine" onclick="clicked(9)">9</button><br>
-      <button class="button special" type="button" name="backspace" onclick="clicked('back')">⌫</button>
-      <button class="button" type="button" name="zero" onclick="clicked(0)">0</button>
+      <button class="button" type="button" id="1">1</button>
+      <button class="button" type="button" id="2">2</button>
+      <button class="button" type="button" id="3">3</button><br>
+      <button class="button" type="button" id="4">4</button>
+      <button class="button" type="button" id="5">5</button>
+      <button class="button" type="button" id="6">6</button><br>
+      <button class="button" type="button" id="7">7</button>
+      <button class="button" type="button" id="8">8</button>
+      <button class="button" type="button" id="9">9</button><br>
+      <button class="button special" type="button" id="10">⌫</button>
+      <button class="button" type="button" id="0">0</button>
       <input class="button special" type="submit" name="submit" value="✔️">
     </div>
 </form>
 
 
+
   </center>
-  <script type="text/javascript" src="pinpad.js">
-  </script>
+  <script type="text/javascript" src="pinpad.js"></script>
 
   </body>
 
