--- a/instance.html
+++ b/instance.html
@@ -7,8 +7,8 @@
 
 </head>
 <body id="body">
-    <button id="test">Delete button</button>
-    <button id="tab">Get tab</button>
+    <!--<button id="test">Delete button</button>-->
+    <button id="tab" class="instance">+</button>
     <br>
 
 
