--- a/instance.html
+++ b/instance.html
@@ -3,16 +3,21 @@
 <head>
     <title>Instances</title>
     <link href="instance.css" rel="stylesheet" type="text/css">
-
-
 </head>
+
+
 <body id="body">
+  <center>
+
+    <h1>Click the + button below to enter the tab name</h1>
     <!--<button id="test">Delete button</button>-->
     <button id="tab" class="instance">+</button>
     <br>
 
+  </center>
 
     <script type="text/javascript" src="instance.js"></script>
 </body>
+
 
 </html>
