Button Functionality and Styling

--- a/instance.html
+++ b/instance.html
@@ -8,13 +8,16 @@
 
 <body id="body">
   <center>
+  <div id="div">
 
-    <h1>Click the + button below to enter the tab name</h1>
-    <!--<button id="test">Delete button</button>-->
-    <button id="tab" class="instance">+</button>
+    <h1>Click to add a new tab instance</h1>
+    <button id="tab">+</button>
     <br>
 
-  </center>
+
+</div>
+</center>
+
 
     <script type="text/javascript" src="instance.js"></script>
 </body>
