Error checking and design features

--- a/instance.html
+++ b/instance.html
@@ -8,12 +8,14 @@
 
 <body id="body">
   <center>
-  <div id="div">
+  <div id="mainDiv">
 
     <h1>Click to add a new tab instance</h1>
     <button id="tab">+</button>
     <br>
-
+    <div id="div">
+      <button id="storage" type="button" name="button" style="display:none">storage</button>
+    </div>
 
 </div>
 </center>
