storage api integration

--- a/instance.html
+++ b/instance.html
@@ -13,8 +13,9 @@
     <h1>Click to add a new tab instance</h1>
     <button id="tab">+</button>
     <br>
+    <!--div to add instance buttons to-->
     <div id="div">
-      <button id="storage" type="button" name="button" style="display:none">storage</button>
+      
     </div>
 
 </div>
