intial pinpad integration and styling

--- a/instance.html
+++ b/instance.html
@@ -14,12 +14,10 @@
     <button id="tab">+</button>
     <br>
     <!--div to add instance buttons to-->
-    <div id="div">
-      
-    </div>
+    <div id="div"></div>
 
-</div>
-</center>
+  </div>
+  </center>
 
 
     <script type="text/javascript" src="instance.js"></script>
