--- a/pinpad.html
+++ b/pinpad.html
@@ -25,7 +25,7 @@
       <button class="button" type="button" id="9">9</button><br>
       <button class="button special" type="button" id="10">⌫</button>
       <button class="button" type="button" id="0">0</button>
-      <input class="button special" type="submit" id="submit" name="submit" value="✔️">
+      <input class="button special" type="submit" id="submit" name="submit" value="✓">
     </div>
 </form>
 
@@ -33,7 +33,6 @@
 
   </center>
   <script type="text/javascript" src="pinpad.js"></script>
-
   </body>
 
   </html>
