project break and testing

--- a/instance.html
+++ b/instance.html
@@ -7,6 +7,7 @@
 
 
 <body id="body">
+  <div id="container">
   <center>
   <div id="mainDiv">
 
@@ -18,9 +19,9 @@
 
   </div>
   </center>
-
-
     <script type="text/javascript" src="instance.js"></script>
+  </div>
+  <iframe src="pinpad.html" class="pad-fr" id="pad-frm"></iframe>
 </body>
 
 
