--- a/pinpad.html
+++ b/pinpad.html
@@ -13,7 +13,8 @@
   <form autocomplete="off" id="pinpad">
 
     <div>
-      <input autocomplete="off" class="header" type="text" name="pinpad" id="pad" minlength="4" maxlength="6" pattern="[0-9]{4,6}" required placeholder="Enter your pin"><br><br>
+      <input autocomplete="off" class="header" type="text" name="pinpad" id="pad"
+      minlength="4" maxlength="6" pattern="[0-9]{4,6}" required placeholder="Enter your pin"><br><br>
       <button class="button" type="button" id="1">1</button>
       <button class="button" type="button" id="2">2</button>
       <button class="button" type="button" id="3">3</button><br>
