--- a/instance.html
+++ b/instance.html
@@ -20,6 +20,7 @@
   </div>
   </center>
     <script type="text/javascript" src="instance.js"></script>
+    <script type="text/javascript" src="node_modules/crypto-js/crypto-js.js"></script>
   </div>
 </body>
 
