--- a/instance.html
+++ b/instance.html
@@ -11,7 +11,7 @@
   <center>
   <div id="mainDiv">
 
-    <h1>Click to add a new tab instance</h1>
+    <h1> CLICK TO ADD A NEW TAB INSTANCE </h1>
     <button id="tab">+</button>
     <br>
     <!--div to add instance buttons to-->
