--- a/instance.html
+++ b/instance.html
@@ -12,7 +12,9 @@
   <div id="mainDiv">
 
     <h1> CLICK TO ADD A NEW TAB INSTANCE </h1>
-    <button id="tab">+</button>
+    <button id="tab">save tab</button>
+    <button id="tab">save window</button>
+    <br>
     <br>
     <!--div to add instance buttons to-->
     <div id="div"></div>
