--- a/instance.html
+++ b/instance.html
@@ -12,8 +12,8 @@
   <div id="mainDiv">
 
     <h1> CLICK TO ADD A NEW TAB INSTANCE </h1>
-    <button id="tab">save tab</button>
-    <button id="tab">save window</button>
+    <button id="tab" class="create">save tab</button>
+    <button id="window" class="create">save window</button>
     <br>
     <br>
     <!--div to add instance buttons to-->
