--- a/instance.html
+++ b/instance.html
@@ -14,25 +14,35 @@
     <span id="hdr-text" class="header-text"><b>Save</b> tabs with <b>security</b></span>
 
   </div>
+  
   <div id="container">
   <center>
+
   <!-- Div that holds the containers for tab instances and window instances -->
   <div id="mainDiv">
 
     <div class="btnContainer" id="tabContainer">
-        <button id="tabBtn" class="create"><span class="plus">+</span> save tab</button>
-
+      <button id="tabBtn" class="create"><span class="plus">+</span> save tab</button>
 
     </div>
 
     <div id="divider"></div>
 
     <div class="btnContainer" id="windowContainer">
-        <button id="windowBtn" class="create"><span class="plus">+</span> save window</button>
-            
+      <button id="windowBtn" class="create"><span class="plus">+</span> save window</button>
+
 
     </div>
 
+  </div>
+
+  <br/>
+  <div id="tooltip_tab">
+    Saves current tab
+  </div>
+
+  <div id="tooltip_window">
+    Saves all tabs in current window
   </div>
   </center>
     <script type="text/javascript" src="instance.js"></script>
