--- a/instance.html
+++ b/instance.html
@@ -47,7 +47,11 @@
     <script type="text/javascript" src="instance.js"></script>
     <script type="text/javascript" src="node_modules/crypto-js/crypto-js.js"></script>
   </div>
-</body>
 
+  <div id="footer">
+    <p>For usage instructions, features and information on TabLock, visit our <a href="https://github.com/shahoodahmad/TabLock" target="_blank">Github page</a>. </p>
+  </div>
+  
+</body>
 
 </html>
