fixed bug with storage, updated README

--- a/instance.html
+++ b/instance.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Header banner -->
   <div id="header">
-    <img src="favicon.png" width="15%" height="15%">
+    <img src="favicon.svg" id="logoimg">
     <h1 id="tablock" class="header-text">TabLock</h1>
     <span id="hdr-text" class="header-text"><b>Save</b> tabs with <b>security</b></span>
 
