--- a/instance.html
+++ b/instance.html
@@ -36,10 +36,10 @@
 
   </div>
 
-  <div id="tooltip_tab">
+  <div class="tooltip" id="tooltip_tab">
     Saves current tab
   </div>
-  <div id="tooltip_window">
+  <div class="tooltip" id="tooltip_window">
     Saves all tabs in current window
   </div>
 
